--- a/app/templates/week.html
+++ b/app/templates/week.html
@@ -35,7 +35,7 @@
                                     {% endif %} {{ ingrediente.nombre }}</li>
                                 {% endfor %}
                             </ul>
-                            <h6>Preparación:</h6>
+                            <h6>Preparación:<a href="/edit_preparation/{{ dia.plato_id }}"><iconify-icon class="text-secondary" icon="pepicons-pencil:pen" width="20" height="20"></iconify-icon></a></h6>
                             <p>{{ dia.plato_preparacion }}</p>
                         </div>
                     </div>
