--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -115,10 +115,9 @@
 
             <li class="nav-item">
               {% if session.get("user_id") %}
-              <a class="nav-link {% if request.path == '/ingredients' %}active{% endif %}" href="/ingredients">Checklist
-                de ingredientes</a>
+              <a class="nav-link {% if request.path == '/ingredients' %}active{% endif %}" href="/ingredients">Lista de compras</a>
               {% else %}
-              <a class="nav-link disabled" href="">Checklist de ingredientes</a>
+              <a class="nav-link disabled" href="">Lista de compras</a>
               {% endif %}
             </li>
 
