--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -76,6 +76,7 @@
     transform: translateY(-50%);
     cursor: pointer;
     color: #666;
+    touch-action: manipulation; 
   }
 
   .eye-icon:hover {
