--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -33,7 +33,7 @@
             </div>
         </div>
             <div class="d-flex justify-content-end">
-                <a href="" class="mt-2 pe-2" onclick="window.history.back()">Cancelar</a>
+                <a href="/login" class="mt-2 pe-2">Cancelar</a>
                 <button type="submit" class="btn btn-success">Crear usuario</button>
             </div>
         </form>
